perf: 스크랩 목록 조회 시 N+1 문제 해결 및 쿼리 개선